# GlobeTrotter_odoo

./: .env.example  .gitignore  AI_TRAVEL_AGENT_README.md  API_DOCUMENTATION.md  Dockerfile  Makefile  README.md  README_NEW.md  docker-compose.yml  go.mod  go.sum  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
backend/: .env  .env.example  README.md  auth.py  config.py  db.py  main.py  repositories.py
backend/agent/: __init__.py  workflow.py
backend/models/: __init__.py  city_model.py  trip_model.py
backend/repositories/: __init__.py  city_repository.py  conversation_repository.py  trip_repository.py
backend/services/: __init__.py  advanced_ai_service.py  api_tools.py  blacklist_service.py  context_service.py  gemini_service.py  multimodal_service.py
cmd/server/: main.go
config/: config.go  database.go
controllers/: activity_controller.go  admin_controller.go  stop_controller.go  trip_controller.go  user_controller.go
docs/: API_REFERENCE.md  DEVELOPMENT.md  GlobeTrotter_API.postman_collection.json  openapi.yaml
internal/api/: handlers.go
internal/auth/: auth.go
internal/cache/: cache.go
middlewares/: auth.go  common.go
migrations/: indexes.go
models/: activity.go  common.go  stop.go  trip.go  user.go
repositories/: activity_repository.go  stop_repository.go  trip_repository.go  user_repository.go
services/: activity_service.go  admin_service.go  stop_service.go  trip_service.go  user_service.go
src/: App.tsx  index.css  types.ts
src/lib/: id.ts  (+2 more)
utils/: auth.go  cache.go
(+62 files in other folders)
